Fix dark mode in some pages, cleanup

--- a/src/app/pages/backupdid/backupdid.scss
+++ b/src/app/pages/backupdid/backupdid.scss
@@ -30,8 +30,8 @@
         height: 22px;
         background: #565bdb;
         border-radius: 100%;
-        border: 2px solid #ffffff;
-        color: #ffffff;
+        border: 2px solid #fdfeff;
+        color: #fdfeff;
         display: flex;
         justify-content: center;
         align-items: center;
