--- a/src/app/pages/editprofile/editprofile.scss
+++ b/src/app/pages/editprofile/editprofile.scss
@@ -1,7 +1,4 @@
 .container {
-  background: #fdfeff;
-  min-height: 100%;
-
   ion-row {
     padding: 2.5px 0;
 
@@ -24,7 +21,6 @@
       ion-label {
         font-size: 14px;
         font-weight: 600;
-        color: #161740;
       }
 
       .add-label {
@@ -41,7 +37,6 @@
       ion-input, ion-label, ion-select, ion-datetime {
         font-size: 12px;
         text-align: right;
-        color: #161740;
       }
     }
   }
@@ -63,24 +58,6 @@
         font-size: 16px;
         font-weight: 500;
         letter-spacing: -0.43px;
-      }
-    }
-  }
-}
-
-.darkContainer {
-  background: #191a2f;
-
-  ion-row {
-    .label-container {
-      ion-label {
-        color: #ffffff;
-      }
-    }
-
-    .edit-container {
-      ion-input, ion-label, ion-select, ion-datetime {
-        color: #ffffff;
       }
     }
   }
