--- a/src/app/pages/verifymnemonics/verifymnemonics.scss
+++ b/src/app/pages/verifymnemonics/verifymnemonics.scss
@@ -33,7 +33,7 @@
         height: 22px;
         background: #f0f1ff;
         border-radius: 100%;
-        border: 2px solid #ffffff;
+        border: 2px solid #fdfeff;
         color: #161740;
         display: flex;
         justify-content: center;
@@ -51,7 +51,7 @@
 
       .mnemonic-index {
         background: #565bdb;
-        color: #ffffff;
+        color: #fdfeff;
       }
 
       ion-label {
@@ -146,7 +146,7 @@
 
       .mnemonic-index {
         background: #565bdb;
-        color: #ffffff;
+        color: #fdfeff;
       }
 
       ion-label {
